Permets le déploiement en DÉMO via la CI/CD

--- a/.github/workflows/integration-continue.yml
+++ b/.github/workflows/integration-continue.yml
@@ -2,7 +2,7 @@ name: L'intégration continue
 
 on:
   push:
-    branches: [master, initialise-jekyll]
+    branches: [master]
   pull_request:
     branches: [master]
 
