--- a/.github/workflows/integration-continue.yml
+++ b/.github/workflows/integration-continue.yml
@@ -21,10 +21,10 @@ jobs:
           node-version: 18
 
       - name: Installe les dépendances
-        run: npm ci --prefix lib-catalogue
+        run: npm ci --prefix lib-svelte
 
       - name: Exécute les tests
-        run: npm run test --prefix lib-catalogue
+        run: npm run test --prefix lib-svelte
 
       - name: Construis le site via Docker
         run: docker build --target build-le-site -t anssi-portail .
