Ne minifie pas les fichiers svelte en développement

--- a/lib-catalogue/package.json
+++ b/lib-catalogue/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "vite build",
-    "watch": "vite build -w",
+    "watch": "vite build -w --minify false",
     "test": "vitest"
   },
   "devDependencies": {
