Permets de personnaliser le nom et la description des items

--- a/_data/nis2.yml
+++ b/_data/nis2.yml
@@ -17,7 +17,9 @@ reduire-risques:
     - /services/mon-aide-cyber
     - /services/ads
     - /services/silene
-    - /services/mon-service-securise
+    - /services/mon-service-securise:
+        description: Sécuriser les entités publiques
+        nom: MSS
     - /services/assistance-technique
     - /services/conseil-technique
     - /ressources/revue-presse
