update suite retours Fabien

--- a/_data/parcours-approfondir.yml
+++ b/_data/parcours-approfondir.yml
@@ -7,7 +7,7 @@ sensibiliser:
     - /services/cot
     - /ressources/malette-cyber
 
-se former:
+se-former:
   titre: Se former
   explication: Développez les compétences cyber de vos équipes.
   items:
