--- a/_data/nis2.yml
+++ b/_data/nis2.yml
@@ -8,19 +8,28 @@ s-enregistrer:
   titre: S’enregistrer
   explication: Procédez à l’enregistrement de votre entité auprès de l’ANSSI.
   items:
-    - /services/NIS2
+    - /services/NIS2:
+        tags:
+          - Entités publiques
+          - Entité régulées
 
 reduire-risques:
   titre: Réduire ses risques cyber
   explication: Mettez en place des mesures de sécurité adaptées.
   items:
     - /services/mon-aide-cyber
-    - /services/ads
-    - /services/silene
-    - /services/mon-service-securise:
+    - /services/ads:
         tags:
-          - Entité publique
-    - /services/assistance-technique
+          - Entités publiques
+          - Entité régulées
+    - /services/silene:
+        tags:
+          - Entités publiques
+          - Entité régulées
+    - /services/assistance-technique:
+        tags:
+          - Entités publiques
+          - Entité régulées
     - /services/conseil-technique
     - /ressources/revue-presse
 
