N’inclus pas dans le site généré des fichiers de construction

--- a/_config.yml
+++ b/_config.yml
@@ -21,3 +21,6 @@ exclude:
     - lib-svelte/test/
     - test/
     - node_modules/
+    - package.json
+    - package-lock.json
+    - "*.config.js"
