--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "anssi-portail",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "serveur.ts",
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "dev": "node --watch --import tsx ./src/serveur.ts",
+    "start": "node ./dist-back/serveur.js"
   },
   "repository": {
     "type": "git",
@@ -12,6 +14,13 @@
   },
   "private": true,
   "devDependencies": {
-    "vitest": "^3.0.4"
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.4",
+    "tsx": "^4.19.3",
+    "vitest": "^3.0.4",
+    "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "express": "^4.21.2"
   }
 }
