--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "serveur.ts",
   "scripts": {
     "test": "vitest",
-    "dev": "node --watch --import tsx ./src/serveur.ts",
+    "dev": "npx concurrently -n \"SERVEUR,SVELTE,JEKYLL\" \"node --watch --import tsx ./src/serveur.ts\" \"npm run watch --prefix lib-svelte\" \"sleep 3 && jekyll build -w\" ",
     "start": "node ./dist-back/serveur.js"
   },
   "repository": {
