--- a/package.json
+++ b/package.json
@@ -13,13 +13,7 @@
   },
   "private": true,
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.13.4",
     "tsx": "^4.19.3",
-    "vitest": "^3.0.4",
-    "typescript": "^5.7.3"
-  },
-  "dependencies": {
-    "express": "^4.21.2"
+    "vitest": "^3.0.4"
   }
 }
