Installe les dépendances sur l’intégration continue pour tous les modules

--- a/.github/workflows/integration-continue.yml
+++ b/.github/workflows/integration-continue.yml
@@ -20,6 +20,9 @@ jobs:
         with:
           node-version: 18
 
+      - name: (TOUS) Installe les dépendances
+        run: npm ci
+
       - name: (SITE STATIQUE) Installe les dépendances
         run: npm ci --prefix front
 
