--- a/back/package.json
+++ b/back/package.json
@@ -10,7 +10,9 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.4",
+    "@types/supertest": "^6.0.2",
     "node-mocks-http": "^1.16.2",
+    "supertest": "^7.0.0",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3",
     "vitest": "^3.0.4"
