--- a/back/package.json
+++ b/back/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
-    "express-validator": "^7.2.1"
+    "express-validator": "^7.2.1",
+    "openid-client": "^5.7.0"
   }
 }
