Assure l'exécution récursive des tests via node
... en forçant l'utilisation de node 23 car le problème a été réglé dans node 21

--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "serveur.ts",
   "scripts": {
-    "test": "node --import tsx --test ./tests/**/*.spec.ts"
+    "test": "node --import tsx --test './tests/**/*.spec.ts'"
+  },
+  "engines": {
+    "node": ">=23"
   },
   "private": true,
   "devDependencies": {
