Écris les informations de l’utilisateur dans la session

--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,4 @@ OIDC_CLIENT_SECRET = # Secret du fournisseur de service
 
 # MATOMO
 MATOMO_ID= # ID du site déclaré dans Matomo. Laisser vide ou commenter la ligne pour ne pas utiliser Matomo
+SECRET_COOKIE= # Secret utilisé pour signer le cookie de session
