Ajoute un token JWT à la session

--- a/.env.template
+++ b/.env.template
@@ -4,7 +4,8 @@ URL_BASE_MSC= # URL de base du site web, ex. http://messervices.cyber.gouv.fr
 OIDC_URL_BASE = # Adresse de base du serveur OIDC
 OIDC_CLIENT_ID = # Identifiant du fournisseur de service
 OIDC_CLIENT_SECRET = # Secret du fournisseur de service
+SECRET_COOKIE= # Secret utilisé pour signer le cookie de session
+SECRET_JWT= # Secret utilisé pour le token JWT
 
 # MATOMO
 MATOMO_ID= # ID du site déclaré dans Matomo. Laisser vide ou commenter la ligne pour ne pas utiliser Matomo
-SECRET_COOKIE= # Secret utilisé pour signer le cookie de session
