--- a/back/package.json
+++ b/back/package.json
@@ -11,8 +11,10 @@
   },
   "private": true,
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.8",
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.4",
     "@types/supertest": "^6.0.2",
     "node-mocks-http": "^1.16.2",
@@ -22,10 +24,12 @@
     "vitest": "^3.0.4"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "openid-client": "^5.7.0"
   }
 }
