--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,6 @@ URL_BASE_MSC= # URL de base du site web, ex. http://messervices.cyber.gouv.fr
 OIDC_URL_BASE = # Adresse de base du serveur OIDC
 OIDC_CLIENT_ID = # Identifiant du fournisseur de service
 OIDC_CLIENT_SECRET = # Secret du fournisseur de service
+
+# MATOMO
+MATOMO_ID= # ID du site déclaré dans Matomo. Laisser vide ou commenter la ligne pour ne pas utiliser Matomo
