--- a/front/lib-svelte/package.json
+++ b/front/lib-svelte/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@tsconfig/svelte": "^5.0.4",
+    "@types/axios": "^0.9.36",
     "prettier": "3.3.3",
     "prettier-plugin-svelte": "^3.2.8",
     "svelte": "^5.1.3",
@@ -19,5 +20,8 @@
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
     "vitest": "^2.1.5"
+  },
+  "dependencies": {
+    "axios": "^1.8.1"
   }
 }
