Autorise le cache sur les fichiers statiques

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,6 @@
+# Serveur
 URL_BASE_MSC= # URL de base du site web, ex. http://messervices.cyber.gouv.fr
+CACHE_CONTROL_FICHIERS_STATIQUES = # politique de `cache-control` sur les fichiers statiques, mettre à `no-store` ou `public, max-age=0` pour le dev. local
 
 # OIDC
 OIDC_URL_BASE= # Adresse de base du serveur OIDC
