--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,14 @@
 URL_BASE_MSC= # URL de base du site web, ex. http://messervices.cyber.gouv.fr
 
 # OIDC
-OIDC_URL_BASE = # Adresse de base du serveur OIDC
-OIDC_CLIENT_ID = # Identifiant du fournisseur de service
-OIDC_CLIENT_SECRET = # Secret du fournisseur de service
+OIDC_URL_BASE= # Adresse de base du serveur OIDC
+OIDC_CLIENT_ID= # Identifiant du fournisseur de service
+OIDC_CLIENT_SECRET= # Secret du fournisseur de service
 SECRET_COOKIE= # Secret utilisé pour signer le cookie de session
 SECRET_JWT= # Secret utilisé pour le token JWT
 
 # MATOMO
 MATOMO_ID= # ID du site déclaré dans Matomo. Laisser vide ou commenter la ligne pour ne pas utiliser Matomo
+
+#BASE_DONNEES
+BASE_DONNEES_URL_SERVEUR= # URL du serveur de base de données, ex. postgres://user@msc-db/msc
