--- a/back/package.json
+++ b/back/package.json
@@ -30,6 +30,8 @@
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "openid-client": "^5.7.0"
+    "knex": "^3.1.0",
+    "openid-client": "^5.7.0",
+    "pg": "^8.13.3"
   }
 }
