--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "serveur.ts",
   "scripts": {
-    "dev": "npx concurrently -n \"SERVEUR,SVELTE,JEKYLL,BDD\" \"node --watch --import tsx --env-file .env ./back/src/serveur.ts\" \"npm run watch --prefix front/lib-svelte\" \"sleep 3 && jekyll build -s ./front -d ./front/_site -w\" \"docker compose up msc-db\"",
     "installe-tout": "npx concurrently -n \"SERVEUR,SVELTE,JEKYLL\" \"npm install --prefix back\" \"npm install --prefix front/lib-svelte\" \"npm install\" ",
-    "start": "node ./dist-back/serveur.js"
+    "migre-bdd": "node --env-file=.env back/node_modules/knex/bin/cli.js migrate:latest --knexfile back/knexfile.ts",
+    "dev": "npx concurrently -n \"SERVEUR,SVELTE,JEKYLL,BDD,MIGRE\" \"node --watch --import tsx --env-file .env ./back/src/serveur.ts\" \"npm run watch --prefix front/lib-svelte\" \"sleep 3 && jekyll build -s ./front -d ./front/_site -w\" \"docker compose up msc-db\" \"sleep 3 && npm run migre-bdd\"",
+    "start": "npm run migre-bdd && node ./dist-back/serveur.js"
   },
   "repository": {
     "type": "git",
