Ajoute l’application dans docker-compose
... afin de corriger le déploiement dans clever et de pouvoir reproduire la construction de l’image en local

--- a/.env.template
+++ b/.env.template
@@ -11,4 +11,4 @@ SECRET_JWT= # Secret utilisé pour le token JWT
 MATOMO_ID= # ID du site déclaré dans Matomo. Laisser vide ou commenter la ligne pour ne pas utiliser Matomo
 
 #BASE_DONNEES
-BASE_DONNEES_URL_SERVEUR= # URL du serveur de base de données, ex. postgres://user@msc-db/msc
+BASE_DONNEES_URL_SERVEUR= # URL du serveur de base de données, ex. postgres://user@db/msc
