--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,11 @@
-version: '3'
-
-x-app: &configuration-base
-  build:
-    context: .
-
 services:
   app:
     build:
       context: .
     env_file:
       - .env
+    ports:
+      - '3000:3000'
 
   db:
     image: postgres:14
