--- a/.env.template
+++ b/.env.template
@@ -12,6 +12,7 @@ SECRET_JWT= # Secret utilisé pour le token JWT
 
 # MATOMO
 MATOMO_ID= # ID du site déclaré dans Matomo. Laisser vide ou commenter la ligne pour ne pas utiliser Matomo
+MATOMO_URL_TAG_MANAGER=# URL du `.js` du tag manager Matomo, ex. https://stats.data.gouv.fr/js/container_XXXX.js
 
 #BASE_DONNEES
 BASE_DONNEES_URL_SERVEUR= # URL du serveur de base de données, ex. postgres://user@db/msc
