--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,9 @@
 # Serveur
 URL_BASE_MSC= # URL de base du site web, ex. http://messervices.cyber.gouv.fr
 CACHE_CONTROL_FICHIERS_STATIQUES = # politique de `cache-control` sur les fichiers statiques, mettre à `no-store` ou `public, max-age=0` pour le dev. local
-# SERVEUR_TRUST_PROXY = # optionnel nombre de proxies en amont du service ou configuration plus fine de trust proxy, Cf.  https://expressjs.com/en/guide/behind-proxies.html
+# SERVEUR_TRUST_PROXY = # optionnel (0 par défaut) nombre de proxies en amont du service ou configuration plus fine de trust proxy, Cf.  https://expressjs.com/en/guide/behind-proxies.html
+# SERVEUR_MAX_REQUETES_PAR_MINUTE = # optionnel (600 par défaut) nombre maximum de requêtes par minute par IP
+
 
 # OIDC
 OIDC_URL_BASE= # Adresse de base du serveur OIDC
