--- a/front/lib-svelte/.prettierrc
+++ b/front/lib-svelte/.prettierrc
@@ -5,5 +5,7 @@
       "files": "*.svelte",
       "options": { "parser": "svelte" }
     }
-  ]
+  ],
+  "singleQuote": true,
+  "trailingComma": "es5"
 }
