--- a/front/lib-svelte/package.json
+++ b/front/lib-svelte/package.json
@@ -14,6 +14,7 @@
     "@types/axios": "^0.9.36",
     "prettier": "3.3.3",
     "prettier-plugin-svelte": "^3.2.8",
+    "sass-embedded": "^1.85.1",
     "svelte": "^5.1.3",
     "svelte-check": "^4.0.5",
     "tslib": "^2.8.0",
