Ajoute un adaptateur de gestion d'erreur Sentry

--- a/.env.template
+++ b/.env.template
@@ -18,3 +18,7 @@ MATOMO_URL_TAG_MANAGER=# URL du `.js` du tag manager Matomo, ex. https://stats.d
 
 #BASE_DONNEES
 BASE_DONNEES_URL_SERVEUR= # URL du serveur de base de données, ex. postgres://user@db/msc
+
+# SENTRY (gestionErreur)
+SENTRY_DSN= # Le « DSN » du projet Sentry sur lequel envoyer les exceptions. Laisser commenté pour ne pas utiliser Sentry.
+SENTRY_ENVIRONNEMENT= # L'environnement Sentry auquel seront associées les exceptions loguées, si Sentry est utilisé.
