--- a/back/package.json
+++ b/back/package.json
@@ -24,6 +24,7 @@
     "vitest": "^3.0.4"
   },
   "dependencies": {
+    "@sentry/node": "^7.102.1",
     "axios": "^1.8.2",
     "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.0",
