Implémente l'adaptateur journal
...avec version mémoire et version Postgres

--- a/.env.template
+++ b/.env.template
@@ -22,3 +22,8 @@ BASE_DONNEES_URL_SERVEUR= # URL du serveur de base de données, ex. postgres://u
 # SENTRY (gestionErreur)
 SENTRY_DSN= # Le « DSN » du projet Sentry sur lequel envoyer les exceptions. Laisser commenté pour ne pas utiliser Sentry.
 SENTRY_ENVIRONNEMENT= # L'environnement Sentry auquel seront associées les exceptions loguées, si Sentry est utilisé.
+
+#BASE_DONNEES_JOURNAL
+BASE_DONNEES_JOURNAL_EN_MEMOIRE = # `true` pour utiliser un « Journal MSC » en mémoire. Sinon le journal utilisera la base de données « BASE_DONNEES_JOURNAL_URL_SERVEUR »
+BASE_DONNEES_JOURNAL_URL_SERVEUR = # URL du serveur de base de données du journal, ex. postgres://user@msc-journal-db:5432/msc-journal
+BASE_DONNEES_JOURNAL_POOL_CONNEXION_MAX = # Nombre de connexions maximum à la bdd du journal
