--- a/back/package.json
+++ b/back/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "openid-client": "^5.7.0",
-    "pg": "^8.13.3"
+    "pg": "^8.13.3",
+    "uuid": "^11.1.0"
   }
 }
