--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,6 @@
 # Serveur
 URL_BASE_MSC= # URL de base du site web, ex. http://messervices.cyber.gouv.fr
-CACHE_CONTROL_FICHIERS_STATIQUES = # politique de `cache-control` sur les fichiers statiques, mettre à `no-store` ou `public, max-age=0` pour le dev. local
+CACHE_CONTROL_FICHIERS_STATIQUES= # politique de `cache-control` sur les fichiers statiques, mettre à `no-store` ou `public, max-age=0` pour le dev. local
 # SERVEUR_TRUST_PROXY = # optionnel (0 par défaut) nombre de proxies en amont du service ou configuration plus fine de trust proxy, Cf.  https://expressjs.com/en/guide/behind-proxies.html
 # SERVEUR_MAX_REQUETES_PAR_MINUTE = # optionnel (600 par défaut) nombre maximum de requêtes par minute par IP
 
@@ -24,6 +24,10 @@ SENTRY_DSN= # Le « DSN » du projet Sentry sur lequel envoyer les exceptions. L
 SENTRY_ENVIRONNEMENT= # L'environnement Sentry auquel seront associées les exceptions loguées, si Sentry est utilisé.
 
 #BASE_DONNEES_JOURNAL
-BASE_DONNEES_JOURNAL_EN_MEMOIRE = # `true` pour utiliser un « Journal MSC » en mémoire. Sinon le journal utilisera la base de données « BASE_DONNEES_JOURNAL_URL_SERVEUR »
-BASE_DONNEES_JOURNAL_URL_SERVEUR = # URL du serveur de base de données du journal, ex. postgres://user@msc-journal-db:5432/msc-journal
-BASE_DONNEES_JOURNAL_POOL_CONNEXION_MAX = # Nombre de connexions maximum à la bdd du journal
+BASE_DONNEES_JOURNAL_EN_MEMOIRE= # `true` pour utiliser un « Journal MSC » en mémoire. Sinon le journal utilisera la base de données « BASE_DONNEES_JOURNAL_URL_SERVEUR »
+BASE_DONNEES_JOURNAL_URL_SERVEUR= # URL du serveur de base de données du journal, ex. postgres://user@msc-journal-db:5432/msc-journal
+BASE_DONNEES_JOURNAL_POOL_CONNEXION_MAX= # Nombre de connexions maximum à la bdd du journal
+
+#PROFIL_ANSSI
+PROFIL_ANSSI_JETON_API= # Jeton JWT généré pour MSS pour accéder à l'API MonProfilAnssi
+PROFIL_ANSSI_URL_BASE= # Adresse de base du service MonProfilAnssi
