--- a/back/package.json
+++ b/back/package.json
@@ -29,6 +29,7 @@
     "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.0",
     "express": "^4.21.2",
+    "express-ipfilter": "^1.3.2",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
     "helmet": "^8.0.0",
