--- a/front/lib-svelte/package.json
+++ b/front/lib-svelte/package.json
@@ -20,7 +20,8 @@
     "tslib": "^2.8.0",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
-    "vitest": "^2.1.5"
+    "vitest": "^2.1.5",
+    "vitest-localstorage-mock": "^0.1.2"
   },
   "dependencies": {
     "axios": "^1.8.1"
