Ajoute l'adaptateur d'email Brevo
... et un adaptateur qui log uniquement dans la console, pour le dev local

--- a/.env.template
+++ b/.env.template
@@ -32,3 +32,8 @@ BASE_DONNEES_JOURNAL_POOL_CONNEXION_MAX= # Nombre de connexions maximum à la bd
 #PROFIL_ANSSI
 PROFIL_ANSSI_JETON_API= # Jeton JWT généré pour MSS pour accéder à l'API MonProfilAnssi
 PROFIL_ANSSI_URL_BASE= # Adresse de base du service MonProfilAnssi
+
+#BREVO
+BREVO_API_URL_BASE= # URL de base de l'API Brevo
+BREVO_CLE_API= # Clé d'API permettant l'envoie d'email via BREVO
+BREVO_ID_TEMPLATE_BIENVENUE= # Identifiant du template d'email de bienvenue
