--- a/front/_data/parcours-approfondir.yml
+++ b/front/_data/parcours-approfondir.yml
@@ -28,6 +28,7 @@ securiser:
     - /ressources/cyber-13questions
     - /ressources/prestas-ebios
     - /ressources/visa-secu
+    - /ressources/visa-secu-produit
     - /ressources/cnil-reco
 
 tester:
