--- a/front/_data/parcours-debuter.yml
+++ b/front/_data/parcours-debuter.yml
@@ -11,6 +11,7 @@ securiser:
   items:
     - /services/mon-aide-cyber
     - /ressources/cyber-13questions
+    - /ressources/visa-secu
     - /services/label-expert-cyber
 
 reagir:
