ajout-mac-aidants

--- a/front/_data/catalogue.yml
+++ b/front/_data/catalogue.yml
@@ -11,6 +11,7 @@ ETRE_SENSIBILISE:
   - /ressources/revue-presse
 SECURISER:
   - /services/mon-aide-cyber
+  - /services/mon-aide-cyber-aidants
   - /services/mon-service-securise
   - /services/ads
   - /services/silene
