Ajoute le code de vérification pour Google Search Console

--- a/.env.template
+++ b/.env.template
@@ -37,3 +37,6 @@ PROFIL_ANSSI_URL_BASE= # Adresse de base du service MonProfilAnssi
 BREVO_API_URL_BASE= # URL de base de l'API Brevo
 BREVO_CLE_API= # Clé d'API permettant l'envoie d'email via BREVO
 BREVO_ID_TEMPLATE_BIENVENUE= # Identifiant du template d'email de bienvenue
+
+#GOOGLE SEARCH CONSOLE
+GOOGLE_SEARCH_CONSOLE_VERIFICATION=# Code de vérification de la Google Search Console. Laisser vide pour ne pas inclure la balise <meta> de vérification.
