--- a/front/_data/nis2.yml
+++ b/front/_data/nis2.yml
@@ -18,19 +18,14 @@ reduire-risques:
   explication: Mettez en place des mesures de sécurité adaptées.
   items:
     - /services/mon-aide-cyber
-    - /services/ads:
-        tags:
-          - Entités publiques
-          - Entité régulées
-    - /services/silene:
-        tags:
-          - Entités publiques
-          - Entité régulées
     - /services/assistance-technique:
         tags:
           - Entités publiques
           - Entité régulées
-    - /services/conseil-technique
+    - /services/conseil-technique:
+        tags:
+          - Entités publiques
+          - Entité régulées
     - /ressources/revue-presse
 
 declarer-incident:
