--- a/back/package.json
+++ b/back/package.json
@@ -11,16 +11,19 @@
   },
   "private": true,
   "devDependencies": {
+    "@eslint/js": "^9.23.0",
     "@types/cookie-parser": "^1.4.8",
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.4",
     "@types/supertest": "^6.0.2",
+    "eslint": "^9.23.0",
     "node-mocks-http": "^1.16.2",
     "supertest": "^7.0.0",
     "tsx": "^4.19.3",
-    "typescript": "^5.7.3",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.29.0",
     "vitest": "^3.0.4"
   },
   "dependencies": {
