Ajoute un étape de test back dans l'intégration continue

--- a/.github/workflows/integration-continue.yml
+++ b/.github/workflows/integration-continue.yml
@@ -35,6 +35,12 @@ jobs:
       - name: (SVELTE) Exécute les tests
         run: npm run test --prefix front/lib-svelte
 
+      - name: (BACK) Installe les dépendances
+        run: npm ci --prefix back
+
+      - name: (BACK) Exécute les tests
+        run: npm run test --prefix back
+
       - name: (CONSTRUCTION) Construis le site via Docker
         run: docker build --target build-le-site -t anssi-portail-site .
 
