--- a/front/lib-svelte/package.json
+++ b/front/lib-svelte/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "build": "vite build",
     "watch": "vite build -w --minify false",
-    "test": "vitest"
+    "test": "npx eslint . && vitest",
+    "lint": "npx eslint .",
+    "lint:fix": "npx eslint . --fix"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@tsconfig/svelte": "^5.0.4",
     "@types/axios": "^0.9.36",
+    "eslint": "^9.23.0",
+    "eslint-plugin-svelte": "^3.5.0",
+    "globals": "^16.0.0",
     "prettier": "3.3.3",
     "prettier-plugin-svelte": "^3.2.8",
     "sass-embedded": "^1.85.1",
@@ -19,6 +24,7 @@
     "svelte-check": "^4.0.5",
     "tslib": "^2.8.0",
     "typescript": "~5.6.2",
+    "typescript-eslint": "^8.29.0",
     "vite": "^5.4.10",
     "vitest": "^2.1.5",
     "vitest-localstorage-mock": "^0.1.2"
