--- a/.env.template
+++ b/.env.template
@@ -33,6 +33,9 @@ BASE_DONNEES_JOURNAL_POOL_CONNEXION_MAX= # Nombre de connexions maximum à la bd
 PROFIL_ANSSI_JETON_API= # Jeton JWT généré pour MSS pour accéder à l'API MonProfilAnssi
 PROFIL_ANSSI_URL_BASE= # Adresse de base du service MonProfilAnssi
 
+#MON_AIDE_CYBER
+MON_AIDE_CYBER_URL_BASE= # Adresse de base du service MonAideCyber
+
 #BREVO
 BREVO_API_URL_BASE= # URL de base de l'API Brevo
 BREVO_CLE_API= # Clé d'API permettant l'envoie d'email via BREVO
