--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,24 @@
 services:
-  app:
+  bundle:
+    container_name: mes-services-cyber-bundle
     build:
       context: .
-    env_file:
-      - .env
-    ports:
-      - '3000:3000'
-    depends_on:
-      - db
+      dockerfile: Dockerfile-bundle
+    volumes:
+      - ./front:/srv/bundle/front
+      - /srv/bundle/node_modules
+      - /srv/bundle/front/node_modules
+      - /srv/bundle/front/lib-svelte/node_modules
 
   db:
     image: postgres:14
     environment:
       - POSTGRES_HOST_AUTH_METHOD=trust
     ports:
-      - '5432:5432'
+      - '5435:5432'
     volumes:
       - dbvol:/var/lib/postgresql/data
+      - ./docker-entrypoint-initdb.d/:/docker-entrypoint-initdb.d
 
 volumes:
   dbvol:
