--- a/back/package.json
+++ b/back/package.json
@@ -22,6 +22,7 @@
     "@types/supertest": "^6.0.2",
     "eslint": "^9.23.0",
     "node-mocks-http": "^1.16.2",
+    "prettier": "3.3.3",
     "supertest": "^7.0.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
