--- a/.github/workflows/integration-continue.yml
+++ b/.github/workflows/integration-continue.yml
@@ -24,23 +24,8 @@ jobs:
       - name: (TOUS) Installe les dépendances
         run: npm ci
 
-      - name: (SITE STATIQUE) Installe les dépendances
-        run: npm ci --prefix front
-
-      - name: (SITE STATIQUE) Exécute les tests
-        run: npm run test --prefix front
-
-      - name: (SVELTE) Installe les dépendances
-        run: npm ci --prefix front/lib-svelte
-
-      - name: (SVELTE) Exécute les tests
-        run: npm run test --prefix front/lib-svelte
-
-      - name: (SERVEUR) Installe les dépendances
-        run: npm ci --prefix back
-
-      - name: (SERVEUR) Exécute les tests et le linter
-        run: npm run test --prefix back
+      - name: Exécute les tests
+        run: npm run test
 
       - name: (CONSTRUCTION) Construis le site via Docker
         run: docker build --target build-le-site -t anssi-portail-site .
