Exclus le fichier de configuration d’eslint de la cible

--- a/front/_config.yml
+++ b/front/_config.yml
@@ -21,6 +21,7 @@ exclude:
   - lib-svelte/svelte.config.js
   - lib-svelte/vite.config.ts
   - lib-svelte/test/
+  - lib-svelte/*.mjs
   - test/
   - node_modules/
   - package.json
