Ajoute un adaptateur chiffrement
...qui fonctionne avec un seul sel en SHA256. Nous utilisons cette version du SHA pour rester conforme aux autres produits et parce que l’utilité du SHA512 (qui prend plus de place et de temps) n’est pas démontrée pour cet usage.

--- a/.env.template
+++ b/.env.template
@@ -42,4 +42,7 @@ BREVO_CLE_API= # Clé d'API permettant l'envoie d'email via BREVO
 BREVO_ID_TEMPLATE_BIENVENUE= # Identifiant du template d'email de bienvenue
 
 #GOOGLE SEARCH CONSOLE
-GOOGLE_SEARCH_CONSOLE_VERIFICATION=# Code de vérification de la Google Search Console. Laisser vide pour ne pas inclure la balise <meta> de vérification.
+GOOGLE_SEARCH_CONSOLE_VERIFICATION= # Code de vérification de la Google Search Console. Laisser vide pour ne pas inclure la balise <meta> de vérification.
+
+#CHIFFREMENT
+CHIFFREMENT_SEL_DE_HASHAGE= # Sel à utiliser pour le hachage SHA256
