--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "serveur.ts",
   "scripts": {
-    "test": "npx eslint . && node --import tsx --test './tests/**/*.spec.ts'",
+    "test": "npx eslint . && tsc --noemit && node --import tsx --test './tests/**/*.spec.ts'",
     "lint": "npx eslint .",
     "lint:fix": "npx eslint . --fix"
   },
