Expose une ressource pour les pages Crisp

--- a/.env.template
+++ b/.env.template
@@ -46,3 +46,8 @@ GOOGLE_SEARCH_CONSOLE_VERIFICATION= # Code de vérification de la Google Search 
 
 #CHIFFREMENT
 CHIFFREMENT_SEL_DE_HASHAGE= # Sel à utiliser pour le hachage SHA256
+
+# CRISP
+CRISP_ID_SITE= # Id du site dans le plugin Crisp
+CRISP_CLE_API= # Cle API dans le plugin Crisp
+ARTICLE_PROMOUVOIR_MSC_ID= # Id de l’article dans Crisp
