--- a/front/lib-svelte/package.json
+++ b/front/lib-svelte/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@tsconfig/svelte": "^5.0.4",
+    "@types/qrcode": "^1.5.5",
     "eslint": "^9.23.0",
     "eslint-plugin-svelte": "^3.5.0",
     "globals": "^16.0.0",
@@ -30,7 +31,8 @@
     "vitest-localstorage-mock": "^0.1.2"
   },
   "dependencies": {
-    "axios": "^1.8.2"
+    "axios": "^1.8.2",
+    "qrcode": "^1.5.4"
   },
   "main": "svelte.config.js",
   "directories": {
