--- a/.env.template
+++ b/.env.template
@@ -50,4 +50,5 @@ CHIFFREMENT_SEL_DE_HASHAGE= # Sel à utiliser pour le hachage SHA256
 # CRISP
 CRISP_ID_SITE= # Id du site dans le plugin Crisp
 CRISP_CLE_API= # Cle API dans le plugin Crisp
-ARTICLE_PROMOUVOIR_MSC_ID= # Id de l’article dans Crisp
+ARTICLE_PROMOUVOIR_MSC_ID= # Id de l’article Promouvoir MSC dans Crisp
+ARTICLE_PROMOUVOIR_DIAGNOSTIC_CYBER_ID= # Id de l’article Promouvoir le diagnostic cyber dans Crisp
