Lis les secrets de hachage dans l’environnement

--- a/.env.template
+++ b/.env.template
@@ -52,3 +52,10 @@ CRISP_ID_SITE= # Id du site dans le plugin Crisp
 CRISP_CLE_API= # Cle API dans le plugin Crisp
 ARTICLE_PROMOUVOIR_MSC_ID= # Id de l’article Promouvoir MSC dans Crisp
 ARTICLE_PROMOUVOIR_DIAGNOSTIC_CYBER_ID= # Id de l’article Promouvoir le diagnostic cyber dans Crisp
+
+# HACHAGE
+# Secrets utilisés pour le hachage de données. Les variables sont au format HACHAGE_SECRET_DE_HACHAGE_n où n est un
+# nombre entier, unique, et les différentes variables d'environnement `HACHAGE_SECRET_DE_HACHAGE_n` ont
+# des valeurs de n consécutives et commençant par 1
+HACHAGE_SECRET_DE_HACHAGE_1= # Secret à utiliser pour le hachage HMAC
+#HACHAGE_SECRET_DE_HACHAGE_2= # Second secret à utiliser pour le hachage HMAC
