--- a/back/package.json
+++ b/back/package.json
@@ -32,7 +32,9 @@
   "dependencies": {
     "@lab-anssi/lib": "^1.2.0",
     "@sentry/node": "^7.102.1",
+    "@types/bcrypt": "^5.0.2",
     "axios": "^1.8.2",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.0",
     "express": "^4.21.2",
