Affiche une page de maintenance
...lorsque la variable d’environnement `MODE_MAINTENANCE` est positionnée

--- a/.env.template
+++ b/.env.template
@@ -59,3 +59,6 @@ ARTICLE_PROMOUVOIR_DIAGNOSTIC_CYBER_ID= # Id de l’article Promouvoir le diagno
 # des valeurs de n consécutives et commençant par 1
 HACHAGE_SECRET_DE_HACHAGE_1= # Secret à utiliser pour le hachage HMAC
 #HACHAGE_SECRET_DE_HACHAGE_2= # Second secret à utiliser pour le hachage HMAC
+
+# Maintenance
+MODE_MAINTENANCE= # 'true' pour activer le mode maintenance. Renvoi une erreur 503 et affiche une page dédiée pour toutes les requêtes
