Ajoute un bandeau d’information de maintenance
...lorsqu’une maintenance est prévue

--- a/.env.template
+++ b/.env.template
@@ -62,3 +62,4 @@ HACHAGE_SECRET_DE_HACHAGE_1= # Secret à utiliser pour le hachage HMAC
 
 # Maintenance
 MODE_MAINTENANCE= # 'true' pour activer le mode maintenance. Renvoi une erreur 503 et affiche une page dédiée pour toutes les requêtes
+PREPARATION_MODE_MAINTENANCE= # Permet d'activer un bandeau annonçant une maintenance ce jour. Au format "Jour complet - Xh à Xh". ex: "Jeudi 5 septembre 2024 - 17h à 19h"
