Conditionne l’affichage des filtres
...avec un feature flag `FEATURE_FLAG_FILTRES_COMPARAISON`

--- a/.env.template
+++ b/.env.template
@@ -71,3 +71,6 @@ WEBHOOK_MATTERMOST_RETOURS_EXPERIENCE=# URL du webhook utilisé pour envoyer les
 
 # Répartition des résultats
 NOMBRE_MINIMUM_DE_RESULTATS_COMPARAISON= # Le nombre minimum de resultats pour retourner une répartition au front
+
+# Feature flags
+FEATURE_FLAG_FILTRES_COMPARAISON= # Active les filtres sur l’onglet comparaison
