--- a/.github/workflows/deploiement.yml
+++ b/.github/workflows/deploiement.yml
@@ -6,11 +6,13 @@ on:
   push:
     branches: [main]
   workflow_dispatch: # Pour activer le déclenchement manuel
+  pull_request:
+    branches: [main]
 
 jobs:
-  deploiement-demo:
-    name: Déploiement en DÉMO
-    environment: DEMO
+  deploiement-demo-npm:
+    name: Déploiement en DÉMO (NPM)
+    environment: POC_NODE
     runs-on: ubuntu-latest
     steps:
       - name: Cloner le dépôt Git
@@ -22,7 +24,7 @@ jobs:
         shell: bash
         run: npm install -g clever-tools
 
-      - name: Déployer en DÉMO
+      - name: Déployer en DÉMO (NPM)
         env:
           CLEVER_SECRET: ${{ secrets.CLEVER_CLOUD_SECRET }}
           CLEVER_TOKEN: ${{ secrets.CLEVER_CLOUD_TOKEN }}
@@ -31,26 +33,3 @@ jobs:
           clever link "$ID_APP"
           clever deploy --force --same-commit-policy=rebuild
 
-  deploiement-prod:
-    needs: [deploiement-demo]
-    name: Déploiement en PROD
-    environment: PROD
-    runs-on: ubuntu-latest
-    steps:
-      - name: Cloner le dépôt Git
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # Cloner l'intégralité du dépôt, pour ne pas avoir de « shallow repo » rejeté par Clever
-
-      - name: Installer la CLI Clever Cloud
-        shell: bash
-        run: npm install -g clever-tools
-
-      - name: Déployer en PROD
-        env:
-          CLEVER_SECRET: ${{ secrets.CLEVER_CLOUD_SECRET }}
-          CLEVER_TOKEN: ${{ secrets.CLEVER_CLOUD_TOKEN }}
-          ID_APP: ${{ secrets.CLEVER_CLOUD_ID_APP }}
-        run: |
-          clever link "$ID_APP"
-          clever deploy --force --same-commit-policy=rebuild
