[FEEDBACK] Cache le CTA avis utilisateur derrière un feature flag

--- a/.env.template
+++ b/.env.template
@@ -75,3 +75,4 @@ NOMBRE_MINIMUM_DE_RESULTATS_COMPARAISON= # Le nombre minimum de resultats pour r
 
 # Feature flags
 FEATURE_FLAG_FILTRES_COMPARAISON= # Active les filtres sur l’onglet comparaison
+FEATURE_FLAG_AVIS_UTILISATEUR= # Active la dialogue de demande d'avis utilisateur (valeurs possibles : true | false)
