[FEEDBACK] Configure le délai d'affichage de la demande utilisateur

--- a/.env.template
+++ b/.env.template
@@ -73,6 +73,9 @@ WEBHOOK_MATTERMOST_AVIS_UTILISATEUR=# URL du webhook utilisé pour envoyer les a
 # Répartition des résultats
 NOMBRE_MINIMUM_DE_RESULTATS_COMPARAISON= # Le nombre minimum de resultats pour retourner une répartition au front
 
+# Avis utilisateur
+DELAI_AFFICHAGE_AVIS_UTILISATEUR= # Délai avant que ne s'affiche le CTA de demande d'avis utilisateur (en secondes)
+
 # Feature flags
 FEATURE_FLAG_FILTRES_COMPARAISON= # Active les filtres sur l’onglet comparaison
 FEATURE_FLAG_AVIS_UTILISATEUR= # Active la dialogue de demande d'avis utilisateur (valeurs possibles : true | false)
