[FINANCEMENTS] Utilise l'URL du document grist

--- a/.env.template
+++ b/.env.template
@@ -76,6 +76,10 @@ NOMBRE_MINIMUM_DE_RESULTATS_COMPARAISON= # Le nombre minimum de resultats pour r
 # Avis utilisateur
 DELAI_AFFICHAGE_AVIS_UTILISATEUR= # Délai avant que ne s'affiche le CTA de demande d'avis utilisateur (en secondes)
 
+# Financements
+FINANCEMENTS_GRIST_URL= # Lien du document grist vers le référentiel des financements en cybersécurité
+FINANCEMENTS_GRIST_API_KEY= # Cle API GRIST, générer une clé API en se rendant sur https://grist.numerique.gouv.fr/o/docs/account
+
 # Feature flags
 FEATURE_FLAG_FILTRES_COMPARAISON= # Active les filtres sur l’onglet comparaison
 FEATURE_FLAG_AVIS_UTILISATEUR= # Active la dialogue de demande d'avis utilisateur (valeurs possibles : true | false)
