--- a/front/lib-svelte/package.json
+++ b/front/lib-svelte/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "dompurify": "^3.2.6",
     "qrcode": "^1.5.4"
   },
   "main": "svelte.config.js",
