[GUIDES] Récupère les guides depuis Grist

--- a/.env.template
+++ b/.env.template
@@ -80,6 +80,10 @@ DELAI_AFFICHAGE_AVIS_UTILISATEUR= # Délai avant que ne s'affiche le CTA de dema
 FINANCEMENTS_GRIST_URL= # Lien du document grist vers le référentiel des financements en cybersécurité
 FINANCEMENTS_GRIST_API_KEY= # Cle API GRIST, générer une clé API en se rendant sur https://grist.numerique.gouv.fr/o/docs/account
 
+# Guides
+GUIDES_GRIST_URL= # Lien du document grist vers le référentiel des financements en cybersécurité
+GUIDES_GRIST_API_KEY= # Cle API GRIST, générer une clé API en se rendant sur https://grist.numerique.gouv.fr/o/docs/account
+
 # Feature flags
 FEATURE_FLAG_FILTRES_COMPARAISON= # Active les filtres sur l’onglet comparaison
 FEATURE_FLAG_AVIS_UTILISATEUR= # Active la dialogue de demande d'avis utilisateur (valeurs possibles : true | false)
